--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
     <section id="about">
         <h2>About Me</h2>
+        <img src="profilepic.jpeg" alt="Romain Tomlinson - Profile Picture">
         <p>I am a Computer Science Major who has a passion for Cyber Security and Web Development, I aspire to be an asset to any company that has interest in my skills. I have worked on various projects within my studies and they are located on my Github, which i will link below.</p>
     </section>
 
     <section id="portfolio">
         <h2>Portfolio</h2>
-        <p><a href="https://docs.google.com/document/d/1Pnhku_iwz2OwnVfq5MTc4nDfaLsfaXE7/edit?usp=drive_link&ouid=107200730010042826705&rtpof=true&sd=true" target="a">Download/View my resume</a></p>
+        <p><a href="https://docs.google.com/document/d/1Pnhku_iwz2OwnVfq5MTc4nDfaLsfaXE7/edit?usp=drive_link&ouid=107200730010042826705&rtpof=true&sd=true" target="a">Download my resume</a></p>
     </section>
 
     <section id="contact">
