--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="portfolio">
         <h2>Portfolio</h2>
-        <p><a href="https://docs.google.com/document/d/1Pnhku_iwz2OwnVfq5MTc4nDfaLsfaXE7/edit?usp=drive_link&ouid=107200730010042826705&rtpof=true&sd=true" target="a">Download my resume</a></p>
+        <p><a href="resume.pdf" target="a">Download/View my resume</a></p>
     </section>
 
     <section id="contact">
