--- a/Certif-I/about.html
+++ b/Certif-I/about.html
@@ -47,6 +47,7 @@
 				<li class="active"><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href="login.html">Login</a></li>
+				<li><a href="index.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</header>
