--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Romain Tomlinson - Portfolio</title>
+    <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,6 +29,12 @@
     <section id="portfolio">
         <h2>Portfolio</h2>
         <p><a href="resume.pdf" target="a">Download/View my resume</a></p>
+        <h2>View Projects</h2>
+        <ul>
+            <li><a href="Certif-I/home.html">Certif-I</a></li>
+            <li><a href="Website/index.html">King Codes Factory</a></li>
+            <li><a href="final project documentation.docx" target="a">Download/View My Web Project Documentation</a></li>
+          </ul> 
     </section>
 
     <section id="contact">
@@ -41,7 +47,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Romain Tomlinson</p>
+        <p>&copy; 2024 Romain Tomlinson</p>
     </footer>
 </body>
 </html>
