--- a/Certif-I/about.html
+++ b/Certif-I/about.html
@@ -116,7 +116,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Ceejay King</a></h2>
+		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Romain Tomlinson</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
