--- a/Certif-I/home.html
+++ b/Certif-I/home.html
@@ -48,6 +48,7 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href="login.html">Login</a></li>
+				<li><a href="index.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -435,7 +436,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Ceejay King</a></h2>
+		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Romain Tomlinson</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
