--- a/Certif-I/home.html
+++ b/Certif-I/home.html
@@ -49,6 +49,7 @@
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href="login.html">Login</a></li>
 				<li><a href="index.html">Portfolio</a></li>
+				<li><a href="index.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</header>
