--- a/Certif-I/home.html
+++ b/Certif-I/home.html
@@ -48,6 +48,8 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href="login.html">Login</a></li> 
+				<a href="https://github.com/theeromi/Websiteportfolio.io/blob/main/index.html">Portfolio</a>
+
 			</ul>
 		</nav>
 	</header>
