--- a/Certif-I/home.html
+++ b/Certif-I/home.html
@@ -48,7 +48,7 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href="login.html">Login</a></li> 
-				<a href="https://github.com/theeromi/Websiteportfolio.io/blob/main/index.html">Portfolio</a>
+				<a href="https://theeromi.github.io/Websiteportfolio.io/">Portfolio</a>
 
 			</ul>
 		</nav>
