--- a/Website/index.html
+++ b/Website/index.html
@@ -41,6 +41,8 @@
   				<li><a href="googleplay.html">Google Play Gift Cards</a></li>
   				<li><a href="itunes.html">Itunes Gift Cards</a></li>
   				<li><a href="contact.html">Contact Us</a></li>
+				<a href="https://theeromi.github.io/Websiteportfolio.io/">Portfolio</a>
+
 			</ul></div>	
 			<!-- Home Slide -->
 			<div class="mySlides fade">
