--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Romain Tomlinson - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Romain Tomlinson</h1>
-        <p>Junior Web Developer &amp; Designer</p>
+        <p>E-Porfolio</p>
     </header>
 
     <nav>
