--- a/index.html
+++ b/index.html
@@ -5,6 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romain Tomlinson - CS 499 ePortfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+        }
+        .profile-img {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
+        nav {
+            background-color: #34495e;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            padding: 10px 15px;
+            transition: background 0.3s ease;
+        }
+        nav ul li a:hover {
+            background-color: #1abc9c;
+            border-radius: 5px;
+        }
+        main {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
+        }
+        section {
+            margin-bottom: 40px;
+            text-align: left;
+        }
+        h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #1abc9c;
+            padding-bottom: 5px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 15px;
+            background: #1abc9c;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+        }
+        .btn:hover {
+            background: #16a085;
+        }
+        .image-gallery {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .image-gallery img {
+            width: 250px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #2c3e50;
+            color: white;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,12 +121,15 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>This ePortfolio integrates the knowledge and skills I have gained and developed throughout my studies in the Computer Science program at Southern New Hampshire University (SNHU). It represents my growth in the program and highlights my accomplishments through high-quality outcomes.</p>
+            <p>This ePortfolio integrates the knowledge and skills I have gained and developed throughout my studies in the Computer Science program at Southern New Hampshire University (SNHU). It represents my growth in the program and highlights my accomplishments through high-quality outcomes. This portfolio is designed and developed with a professional-quality written and visual communication style, demonstrating my capabilities and abilities in a coherent, technically sound manner, adapted to a specific technical audience and context.</p>
         </section>
         
         <section id="professional-assessment">
             <h2>Professional Assessment</h2>
             <p>This self-assessment serves as a holistic introduction to me, my skills, and my ePortfolio. It reflects my journey through the Computer Science program, quantifiably supported by my completed enhancements of the artifacts.</p>
+            <p>I began my Computer Science program in June 2023 to strengthen my background in programming, application development, and web services. My passion for working with computers and technology led me to pursue web development and backend engineering, while also incorporating elements of cybersecurity.</p>
+            <p>Throughout my studies, I have developed and refined numerous technical skills. My attention to detail and security-focused mindset have greatly improved, allowing me to become a more effective software engineer and developer. Writing clean, modular code and integrating testing as a core part of my workflow has helped me create efficient and secure applications.</p>
+            <p>As a result of my coursework and hands-on projects, I have gained proficiency in designing scalable applications, optimizing algorithms, and managing structured and unstructured data effectively. This ePortfolio showcases these abilities and provides concrete evidence of my technical growth.</p>
         </section>
         
         <section id="highlights">
@@ -44,7 +144,7 @@
 
         <section id="cs-journey">
             <h2>My Journey in Computer Science</h2>
-            <p>Below are some snapshots of my progress:</p>
+            <p>Throughout my studies, I have worked on various projects including ones in OpenGL throughout my CS 330- Computer Graphics and Visualization course, learning to create shapes, apply textures, and incorporate lighting effects. Below are some snapshots of my progress:</p>
             <div class="image-gallery">
                 <img src="image/reflection.jpeg" alt="Lighting and Reflection Project">
                 <img src="image/texture.jpeg" alt="Texture Mapping Project">
