--- a/code_review.html
+++ b/code_review.html
@@ -85,7 +85,9 @@
         <section id="code-review-video">
             <h2>Code Review Video</h2>
             <p>Below is a walkthrough of my code review, detailing the enhancements and improvements made to my artifacts.</p>
-            <iframe width="800" height="450" src="https://www.youtube.com/embed/8pcDwClF44Q" frameborder="0" allowfullscreen></iframe>
+            <div class="video-container">
+    <iframe width="800" height="450" src="https://www.youtube.com/embed/8pcDwClF44Q" frameborder="0" allowfullscreen></iframe>
+</div>
         </section>
     </main>
 
