--- a/Certif-I/home.html
+++ b/Certif-I/home.html
@@ -47,9 +47,8 @@
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href="login.html">Login</a></li> 
-				<li><a href="https://theeromi.github.io/Websiteportfolio.io/">Portfolio</a></li>
-
+				<li><a href="login.html">Login</a></li>
+				<li><a href="Web portfolio/index.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -437,7 +436,7 @@
 
 	<!-- Footer section -->
 	<footer class="footer-section">
-		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Romain Tomlinson</a></h2>
+		<h2>2017 All rights reserved. Designed by <a href="#" target="_blank">Ceejay King</a></h2>
 	</footer>
 	<!-- Footer section end -->
 
