--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section id="cs-journey">
             <h2>My Journey in Computer Science</h2>
-            <p>Below are some snapshots of my progress:</p>
+            <p>Throughout my studies, I have worked on various projects including ones in OpenGL throughout my CS 330- Computer Graphics and Visualization course, learning to create shapes, apply textures, and incorporate lighting effects. Below are some snapshots of my progress:</p>
             <div class="image-gallery">
                 <img src="image/reflection.jpeg" alt="Lighting and Reflection Project">
                 <img src="image/texture.jpeg" alt="Texture Mapping Project">
