--- a/artifacts.html
+++ b/artifacts.html
@@ -114,7 +114,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="artifacts.html">Artifacts</a></li>
             <li><a href="code_review.html">Code Review</a></li>
-            <li><a href="resume.html">Resume & Contact</a></li>
+            <li><a href="https://romaintomlinson.com/Resume.html">Resume & Contact</a></li>
         </ul>
     </nav>
     
