--- a/code_review.html
+++ b/code_review.html
@@ -76,7 +76,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="artifacts.html">Artifacts</a></li>
-            <li><a href="resume.html">Resume & Contact</a></li>
+            <li><a href="https://romaintomlinson.com/Resume.html">Resume & Contact</a></li>
         </ul>
     </nav>
 
