--- a/artifacts.html
+++ b/artifacts.html
@@ -152,7 +152,7 @@
                 <li>Refactored architecture to use <strong>Model-View-Controller (MVC)</strong> principles.</li>
                 <li>Improved <strong>UI/UX design</strong> for a more intuitive user experience.</li>
             </ul>
-            <a href="artifacts.html" class="btn">View Enhancements</a>
+            <a href="https://github.com/theeromi/CS-499-Computer-Science-Capstone/tree/Enhancement-one-Software-Engineering-and-Design" class="btn" target="_blank">View Enhancements on Github</a>
         </section>
         
         <section id="algorithms">
@@ -163,6 +163,7 @@
                 <li>Implemented a <strong>Binary Search Algorithm</strong> for faster inventory lookups.</li>
                 <li>Optimized sorting and filtering operations for better performance.</li>
             </ul>
+            <a href="https://github.com/theeromi/CS-499-Computer-Science-Capstone/tree/Enhancement-Two--Algorithms-and-Data-Structures" class="btn" target="_blank">View Enhancements on Github</a>
         </section>
         
         <section id="database">
@@ -193,8 +194,7 @@
                 <li>Developed a <strong>web-based interface</strong> using Node.js & MySQL.</li>
                 <li>Added <strong>prepared statements</strong> to prevent SQL injection attacks.</li>
             </ul>
-            <a href="artifacts.html" class="btn">View Enhancements</a>
-
+            <a href="https://github.com/theeromi/CS-499-Computer-Science-Capstone/tree/Enhancement-Three-Databases" class="btn" target="_blank">View Enhancement on GitHub</a>
             <div class="image-gallery">
                 <img src="image/crud.png" alt="CRUD Database Schema">
                 <img src="image/rma.png" alt="RMA Database Schema">
