--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     
     <main>
         <section id="professional-assessment">
-            <h2>Professional Assessment</h2>
+           <!-- <h2>Professional Assessment</h2> -->
+            <div style="text-align: center; margin: 20px 0;">
+                <img src="banner.png" alt="Professional Assessment Banner" style="max-width: 100%; height: auto; border-radius: 8px;">
+            </div>
             <p>As I reflect on my journey through the Computer Science program at Southern New Hampshire University, I am filled with a deep sense of accomplishment and purpose. Since beginning the program in June 2023, I have grown immensely—technically and professionally—gaining hands-on experience and confidence in building scalable, secure, and maintainable applications. Developing this ePortfolio has allowed me to showcase not just my final capstone project but the culmination of key learning milestones that now define my competence as a computer scientist.</p>
         <p>Throughout this program, I acquired critical skills in programming with Java, C++, and Python, alongside strong foundations in databases, web development, and cybersecurity. Among the most impactful learning experiences were:</p>
         <ul>
